--- a/configs/wildlife.yml
+++ b/configs/wildlife.yml
@@ -2,9 +2,9 @@ data:
   in_channels: 1
   val_split: 0.2
   n_targets: 2
-  train_data_dir: ./train
-  valid_data_dir: ./valid
-  test_data_dir: ./test
+  train_data_dir: ./data/train
+  valid_data_dir: ./data/test
+  test_data_dir: ./data/test
 model:
   convolutional:
     out_channels:
@@ -17,7 +17,7 @@ model:
       - 0.10
       - 0.05
   pooling:
-    kernel_size: 4
+    kernel_size: 64
   linear:
     out_features:
       - 70
@@ -29,7 +29,7 @@ model:
 hyper_parameters:
   epochs: 10
   patience: 10
-  batch_size: 2
+  batch_size: 64
   learning_rate: 0.001  # 1e-3
   weight_decay: 0.0001  # 1e-4
   num_workers: 0
